Bug 702036 - JSEventListener could have weak mTarget to reduce CC overhead, r=bz